--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
